...
                Image("UnlockItLogo.png")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .cornerRadius(appStyle.cornerRadiusLarge)
                    .gesture(scanLockTapGesture)
                    .padding()
                    .accessibilityIdentifier("HomeScreenUnlockITLogo")
                
                Spacer()
            }
            
            if scanNow && user.isValidated {
                NFCSimulator(scanNow: $scanNow, selectedLevel: $selectedLevel)
...
