...
            }
        }
        .alert(isPresented: $showAlert) {
            if !showFailedAlert {
                return Alert(title: Text("Lock Activation"),
                             message: Text("Lock Successfully activated"),
                             dismissButton: .default(Text("OK")))
            }
            else {
                showFailedAlert = false
                return Alert(title: Text("Lock Activation"),
                             message: Text("Lock Activation Failed"),
                             dismissButton: .default(Text("OK")))
...
