...
                                Spacer()
                                Text("Login",
                                     comment: "Text on a button, which lets the user navigate to the login screen")
                                Spacer()
                            }
                        }
                        .accessibilityIdentifier("GoToLoginPageButton")
                        .foregroundColor(.white)
                        .padding(15)
                        .background(Color.accentColor)
                        .cornerRadius(appStyle.cornerRadiusSmall)
                    }
                    .padding()
...
